--- a/styles/globals.css
+++ b/styles/globals.css
@@ -174,3 +174,7 @@ pre > code {
 td > code {
   word-break: keep-all !important;
 }
+
+.\!text-primary {
+    color: rgba(255, 255, 0, 0.964) !important;
+}
